@@ -52,7 +52,7 @@ public class SecurityConfiguration {
 //                        .requestMatchers("/api/parking/**").hasRole("PARKING_MANAGER")
 //                        .requestMatchers("/api/protected/**").hasRole("USER")
                         .requestMatchers("/api/**").permitAll()
-                                .requestMatchers("/hc", "env")
+                                .requestMatchers("/api/hc", "/api/env")
                                 .permitAll()
 
                         .anyRequest().denyAll()
@@ -68,9 +68,11 @@ public class SecurityConfiguration {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:5173")); // 허용할 도메인 설정
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE")); // 허용할 HTTP 메서드 설정
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Cache-Control", "Content-Type")); // 허용할 헤더 설정
+//        configuration.setAllowedOrigins(List.of("http://localhost:5173")); // 허용할 도메인 설정
+        configuration.setAllowedOrigins(Arrays.asList("*"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH")); // 허용할 HTTP 메서드 설정
+//        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Cache-Control", "Content-Type")); // 허용할 헤더 설정
+        configuration.setAllowedHeaders(Arrays.asList("*"));
         configuration.setAllowCredentials(true); // 자격 증명을 허용할지 여부 설정
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
